fixing related posts responsive view and z-index on blog search results

--- a/_src/scss/blog/_blog-card-sm.scss
+++ b/_src/scss/blog/_blog-card-sm.scss
@@ -5,14 +5,6 @@
     cursor: pointer;
     height:100%;
 
-    @include breakpoint (w-med) {
-        grid-column: span 6;
-    }
-
-    @include breakpoint (w-sm) {
-        grid-column: span 12;
-    }
-
     &__img-wrap {
         overflow: hidden;
 
